Compile with Java 11
Bump version for release